Revision history for Perl extension Win32::FileNotify.

0.2  Thu Nov  6 11:58:22 2008
     + added manifest.t
     + updated MANIFEST
     + updated README (deleted boilerplate text, added 2008 to copyright)
     + added META.yml

0.1  Wed Nov  7 11:31:18 2007
	- original version; created by h2xs 1.23 with options
		-XA -n Win32::FileNotify
